W-18087604: Remove dead code related to spring